--- a/Report/chapter02--objectives-and-stakeholders.tex
+++ b/Report/chapter02--objectives-and-stakeholders.tex
@@ -1,15 +1,4 @@
 \chapter{Objectives and stakeholders}
-\label{sect:objectives}
-
-\begin{expectations}
-This is a short chapter that identifies the objectives and stakeholders of the project.  A good report also discusses how the different types of stakeholder are affected by the project or how they could be affected by the project.
-
-As you explain the project objectives, focus exclusively on what value the system adds to the stakeholders.  Your objectives should justify \emph{why} you are building the system.  The software requirements are \emph{not} objectives.  The software requirements explain \emph{what} your system can do.  In other words, they are a way to achieve objectives.  Software requirements do \emph{not} belong in this chapter.  Your project should have at least one objective.  Otherwise, the project is a pointless exercise.  Many objectives do not necessarily make for a better project.
-
-Some stakeholders of a project will be obvious: e.g. the people who the beneficiaries of the value your project adds.  However, it is important to be aware of all stakeholders.  The stakeholder D.A.N.C.E. tool to identify all stakeholders and it is explained in a video on project initiation.  Consider carefully how each stakeholder is affected by your project and who the key stakeholders are.
-
-The section headers below provide a suggested structure.  You should feel free to change it or extend it.
-\end{expectations}
 
 \section{Project objectives}
 \label{sect:objectives}
@@ -18,7 +7,7 @@ The section headers below provide a suggested structure.  You should feel free t
     \item \textbf{Facilitate Collaborative Learning:} Enable students to organize and participate in group study sessions effectively.
     \item \textbf{Enhance Academic Performance:} Support students in understanding complex topics through peer discussions and shared resources.
     \item \textbf{Build a Learning Community:} Foster a sense of community where students can motivate each other and learn collectively.
-    \item \textbf{Fill the Gap in the Market:} Create a unique platform for seamless group study and resource sharing.
+    \item \textbf{Fill the Gap in the Market:} Address the lack of dedicated platforms for seemless group sudy, filling a gap in existing tools.
 \end{itemize}
 
 \section{Stakeholder}
@@ -28,18 +17,26 @@ The section headers below provide a suggested structure.  You should feel free t
 \begin{itemize}
     \item \textbf{Students (Primary Stakeholders):}
     \begin{itemize}
-        \item \textit{Impact:} Directly benefit from improved academic performance, subject comprehension, and motivation via collaborative learning.
+        \item \textit{Impact:} Student directly benefit from the website, through its collaborative tools. It reduces distractions, unlike social media or messaging apps, the platform is build entirely for studying and hence minimises  off-task behaviour. Students can get real time help from their peers making their group study sessions more effective. Moreover the gamification feature (Rewards) encourages study consistency, and seeing peers' progress through shared analytics reduces procrastination. Furthermore, students can track progress through to-do-list features avoiding last-minute cramming so that, they can produce above satisfactory work everytime. The idea of GROUP study, combats lonliness during solo study and allows students to be with like - minded individuals so they feel constantly motivated.
         \item \textit{Age Group:} Designed for students across all levels (school to university).
     \end{itemize}
     
-    \item \textbf{Platform Developers and Administrators:}
+    \item \textbf{Platform Developers and Administrators (Primary Stakeholders):}
     \begin{itemize}
-        \item \textit{Impact:} Ensure functionality, data security, and user experience; their work dictates engagement and satisfaction.
+        \item \textit{Impact:} Ensure functionality, data security, and user experience; their work dictates engagement and satisfaction. They need to build real-time tools, ensuring scalability to handle peak usage. They must also continously test the website and troubleshoot it, to ensure bugs are fixed and the website is improved.
+    \end{itemize}
+
+    \item \textbf{Tutors / Teachers {Secondary Stakeholders}:}
+    \begin{itemize}
+        \item \textit{Impact:} The platform can enhance student engagement to their studies by Facilitating a unified learning environment outside classroom hours, and allows educators to track student consistency to their studies through analytic streaks. It can also reduce repetitive questions as students can help each other via the app, meaning that tutors and teachers can spend time teaching more important lessons.
+    \end{itemize}
+
+    \item \textbf{Parents {Secondary Stakeholders}:}
+    \begin{itemize}
+        \item \textit{Impact:} The parents will benefit from an increased visibility into their child's learning habits through the employment of the scheduler and analytics tool in the website. It will increase their child's academic performance with reduced need of physical study groups that require transportation .
     \end{itemize}
 \end{itemize}  
 
 \subsection{Stakeholder analysis}
-As students like ourselves are some of the main stakeholders it was easy to loop in feedback from the team and our peers, which was essential for continuous improvement to the platform.
-
-This systematic approach to identifying objectives and understanding stakeholder impact ensures that the project remains user-focused and goal-oriented.
+Due to their direct influence and impact on the platform's functionality and design, Students are high - power, high interest Stakeholders likewise are the Administrators. Students as primary users, enable iterative imrpovement through continuous feedback, while the Admin balance technical decisions to sustain the platform. On the other hand, Parents and Tutors are low interest stakeholders with indirect influence and little engagement with the platform and it's functionality. In order to manage these dynamics, targetted engagement strategies are essential, for example feedback loops (surveys) for rapid iteration whilst also addressing parent/tutor concerns (e.g. privacy) through communication. This systematic approach to identifying objectives and understanding stakeholder impact ensures that the project remains user-focused and goal-oriented.
 
