--- a/Report/chapter01--introduction.tex
+++ b/Report/chapter01--introduction.tex
@@ -1,13 +1,10 @@
 \chapter{Introduction}
 \label{chap:introduction}
+Our project, \textbf{The Study Spot}, is designed to create a more engaging and productive study experience for students. Many students struggle with study isolation, poor time management, and lack of motivation when working alone. Our platform provides a virtual study space where they can collaborate with friends, hold each other accountable, and work together in a structured, interactive environment. By fostering teamwork and consistency, \textbf{The Study Spot} helps students stay on track and complete their tasks more efficiently.  
 
-Our project, ‘The Study Spot’, is a virtual study space that students can use to study together with friends in a collaborative online environment.
+At its core, \textbf{The Study Spot} is more than just a study tool: It is a community-driven platform that encourages students to stay focused, manage their time effectively, and support each other in their academic goals. Whether they need a quiet space for independent work, a collaborative area to tackle group projects, or a bit of friendly competition to stay motivated, our platform provides the flexibility and resources to make studying more enjoyable and productive.  
 
-Our primary goal is to enhance student productivity and teamwork by providing a platform with essential features such as virtual study rooms, document sharing, chat rooms, rewards, a scheduler, and shared to-do lists.
-
-By fostering an interactive and organised study environment, our application will help users stay focused, work efficiently and subsequently improve their learning experience.
-
-The end-users, students, will benefit from better time management, healthy competition, and access to a shared study environment, making their study sessions more effective and enjoyable.
+Students using \textbf{The Study Spot} will benefit from better time management, a sense of responsibility, and access to a shared study environment that makes learning more interactive. By turning study sessions into a social and structured experience, our platform enhances both productivity and engagement, helping students develop better study habits and achieve their academic goals with greater ease.
 
 \subsection*{Unique Selling Point (USP)}
 During our research, we identified a gap in the market - no dedicated platform offered a comprehensive group study experience with all the features we had envisioned. The Study Spot stands out with its Shared Materials Box, which allows users to upload and access documents, PDFs, and notes directly within the study room. This eliminates the need to send files via email or switch between platforms, easing and facilitating collaboration.
