--- a/Report/chapter04--project-management.tex
+++ b/Report/chapter04--project-management.tex
@@ -1,66 +1,59 @@
 \chapter{Project management}
 \label{chap:project-management}
 
-\defaultInstructions
+In order to manage this project, we split up administrative tasks between the members of the team to ensure that everyone had a role in management and keeping track of the project. We did this so all members had some responsibility and could ensure accountability throughout the project. This also improved efficiency as other members knew who to look to when needing help with a certain task and prevented all the load from being put onto one individual. We split up the roles as follows:
 
-\begin{length}
-There are no strict length requirements for this chapter.  However, it is important that the writing is clear and concise.  Avoid repeating yourself.  Make sure to clearly signpost evidence for claims.  It should be possible for a reader to understand this chapter without consulting other sources.  It is expected that a typical project needs 3--6 pages, but this can vary considerably from project to project.
-\end{length}
-
-\begin{expectations}
-In this chapter, the team must present, reflect on, and evaluate the team's approaches to project management.  This discussion should present the main approaches to project management the team decided to use.  Include the team's rationale for these decisions, and the team's observations on the effectiveness of each approach.
-
-During the project, the team may have made significant changes to project management approaches, or made new decisions where initial arrangements were insufficient.  A typical team will also have encountered difficulties, such as risks that materialised and impacted the team.  Discuss the most critical decisions the team made, why you made them, and what the results were.  If certain approaches were not entirely successful, discuss what you would do differently in a future project.
-
-A good report shows a systematic approach to project management, justifications for key decisions, and a critical reflection on the effectiveness of different approaches.  Ideally, the justifications and reflections in this chapter are based on project management theory.
-
-Note that ``a systematic approach to project management'', ``critical reflection'', and use of ``project management theory'' do not necessary imply that your team's project management approach is a success story.  Thoughful, considered project management improves your chances of success, but projects do not always go according to plan and team's make mistakes.  The markers are looking for
 \begin{itemize}
-    \item Good justifications for approaching a project in a particular way.
-    \item Critical reflection on the results, including recognition of problems.
-    \item The team taking ownership of the problems they encountered.
+    \item \textbf{Chair of Meetings and Organiser} - Aamukta Thogata
+    \item \textbf{Trello Board} - Prapti Patel
+    \item \textbf{GitHub Repo} - Yonna Khatri
+    \item \textbf{Wellbeing Manager} - Onessa Crispeyn
+    \item \textbf{Report} - Isha Selvakumaran
+    \item \textbf{Deployment} - Yuliia Bohak
+    \item \textbf{Meeting Scheduling} - Natalia Ahsan
+    \item \textbf{Meeting Notes} - Agrima Khare
 \end{itemize}
 
-There is no one best way of organising this content.  One approach is to cover different phases of the project management lifecycle (from initialisation to project close).  Another approach is to cover different project management tasks (e.g. team management, scheduling, planning, risk, etc.).  Yet another approach is to cover the most impactful events.  Each project is different and you should take the approach that works best for your team.
+For the duration of the project, we kept logs and records of all meetings and all decisions made on Notion and Team Feedback. We planned a rough timeline for the project in the first week and prioritised the features to ensure that we could complete the most important features on time. 
 
-There is also no minimum or maximum number of issues to cover.  Cover what is more important in the depth necessary to do the topic justice.
-\end{expectations}
+As a team, we spent a lot of time planning and brainstorming before moving on to development ( mostly during winter break ) to ensure that we all had a clear vision of what we wanted the project to be and to ensure that we were all on the same page. This was very important to us as we noticed from previous projects that members having different visions can cause problems later on and disagreements or tasks being completed but then becoming redundant.
 
+Before starting coding, we also made sure to decide on a good tech stack. We decided to keep using Django for the backend as it was something we were all familiar with after the small group project, and this would enable us to make a good start on the backend in the early weeks. We used this to our advantage and focused on learning React for the frontend as a team during the first few weeks while clearing out most of the easier backend tasks using Django. This proved well for our team as it gave us time to learn something new without having to sacrifice many weeks without actually coding.
 
-In order to manage this project we split up administrative tasks between the members of the team to ensure that everyone had a role in management and keeping track of the project. We split up the roles as follows:
+We set expectations for the workload and how much we would aim to contribute early on and decided when we would meet each week and have kept this consistent over the last 3 months. Due to this, we have all been able to stick to deadlines and have had very few issues with tasks running over or not being completed.
+
+The use of our Trello here to assign weekly tasks aligns with principles from Kanban, allowing us to visualize tasks. However, as the project progressed, we shifted towards a more Agile approach, focusing on iterative improvements.
+
+We also went over some rules which we laid down to ensure that the project development would go smoothly. This included rules such as :
 
 \begin{itemize}
-    \item Chair of Meetings and Organiser - Aamukta Thogata
-    \item Trello Board - Prapti Patel
-    \item Github Repo - Yonna Khatri
-    \item Wellbeing Manager - Onessa Crispeyn
-    \item etc....
+    \item We would only push a feature to \texttt{main} \textbf{after} all tests had been written and were fully passing.
+    \item We would not ask each other to complete a task in under 48 hours of it being assigned, to be respectful of each other's time.
+    \item We would make sure that where we could, our code was fully commented and had guidelines to help others understand.
+    \item For larger features, we would wait until a team meeting to approve a pull request so the team could review the changes.
 \end{itemize}
 
-For the duration of the project we kept logs and records of all meetings and all decisions made on Notion. We planned a rough timeline for the project in the first week, and prioritised the features to ensure that we could complete the most important features on time.
 
-As a team we spent a lot of time planning and brainstorming before moving onto development ( mostly during winter break ) to ensure we all had a clear vision for what we wanted the project to be and to make sure that we were all on the same page. This was very important to us as we noticed from previous projects that members having different visions can cause problems later on and disagreements or tasks being completed but then becoming redundant.
-
-Before starting coding we also made sure to decide on a good tech stack. We decided to keep using Django for the backend as it was something we were all familiar with after the small group project, and this would enable us to make a good start on the backend in the early weeks. We used this to our advantage and focused on learning React for the frontend as a team during the first few weeks while clearing out most of the easier backend tasks using Django. I think this was very good for our team because it gave us time to learn something new without having to sacrifice going many weeks without actually coding.
-
-We set expectations for the workload and how much we would aim to contribute early on and decided when we would meet each week and have kept this consistent over the last 3 months. Due to this we have all been able to stick to deadlines and have had very litle issues with tasks running over or not being completed.
-
-We also went over some rules which we laid down to ensure that the project development woudl go smoothly. This included rules such as :
-
+Although we kept to our ground rules as much as possible, at times, it was necessary to go down a different route and times when they would not have worked out:
 
 \begin{itemize}
-    \item We would only push a feature to main AFTER all tests had been written and were fully passing
-    \item We would not ask each other to complete a task in under 48 hours of it being assigned, as to be respectful of each other's time
-    \item We would make sure that where we could our code was fully commented and had guidelines to help others understand
-    \item Add more if you can think of here. ...
+    \item Though we all followed our roles for the most part, we sometimes made some changes. For example:
+    \begin{itemize}
+        \item A number of us worked on deployment as it was not feasible for one person to take on the whole task.
+    \end{itemize}
+    \item We would not move Trello tasks punctually at times, and towards the end of the project, other methods of task tracking were also used.  
+    So, while our initial approach to project tracking with Trello was effective in the early stages, it became less practical towards the end. 
+    \item As more and more small changes were being made, pull requests became more frequent, and it was not convenient to have to wait until a meeting to merge them.
 \end{itemize}
 
-Over the course of the last three months we did have some issues.
+These experiences showed us the importance of adapting our project management tools and strategies as the project evolved, as what worked with one part of the project might not work throughout.
+
+Over the course of the last three months, we also did have some issues.
 
 \begin{itemize}
-    \item Issues with deployment and having to switch to vercel and render from pythonanywhere
-    \item Issues with spotify premium and needing to add free music
-    \item Issues with login and having to add only one login per browser to not mess with the authentication tokens
-    \item Calendar taking a lot longer time than expected but becoming a much bigger and userful feature
-    \item The design of the website evolving as time went on, especially after the advisors feedback
+    \item \textbf{Issues with deployment} and having to switch to Vercel and Render from PythonAnywhere. This was one of our most critical decisions and, although it caused significant delays initially, it proved to be a more stable and necessary decision.
+    \item \textbf{Issues with Spotify Premium} and needing to add free music.
+    \item \textbf{Issues with login}, requiring us to allow only one login per browser to avoid authentication token conflicts.
+    \item \textbf{Calendar feature taking a lot longer than expected}, but ultimately becoming a much bigger and more useful feature.
+    \item \textbf{Website design evolving over time}, especially after receiving feedback from the advisor.
 \end{itemize}
