--- a/Report/main.tex
+++ b/Report/main.tex
@@ -27,7 +27,7 @@ Please remove all expectations and assessment environments from this page before
 \faculty{Faculty of Natural, Mathematical, and Engineering Sciences}
 \department{Department of Informatics}
 \title{Software Engineering Group Project}
-\subtitle{Virtual Study Room}%%% Insert project name here
+\subtitle{The Study Spot - A Virtual Study Room}%%% Insert project name here
 \author{\textit{Team MangoCat}\\   %%% Add team name here
 Aamukta Malyada Thogata\\                        %%% Add first author here
 Agrima Khare\\                        %%% Add second author here
